--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇫🇷 法国-1.33MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇯🇵 日本-909.0KB/s(Youtube:不良林), server: 185.172.113.243, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇬🇧 英国-356.9KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇯🇵 日本-187.4KB/s(Youtube:不良林), server: 185.172.113.226, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇮🇳 印度-1.27MB/s(Youtube:不良林), server: jgwhdlb2.gaox.ml, port: 443, type: trojan, password: 54080134-2cba-4535-8599-95650bd9aa54, sni: jgwhdlb2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-331.9KB/s(Youtube:不良林), server: 185.172.113.108, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-1.36MB/s(Youtube:不良林), server: 5.183.176.92, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇦🇺 澳大利亚-895.4KB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
+  - {name: 🇯🇵 日本-1.16MB/s(Youtube:不良林), server: 185.172.113.226, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-1.47MB/s(Youtube:不良林), server: 185.172.113.243, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-589.7KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇫🇷 法国-885.4KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
   - {name: 🇨🇳 中国-3.60MB/s(Youtube:不良林), server: 36.139.154.17, port: 45392, type: ss, cipher: chacha20-ietf-poly1305, password: 438eb205-b45d-48bf-aec1-c1587b581ea0}
-  - {name: 🇷🇺 俄罗斯联邦-406.8KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇯🇵 日本-1.53MB/s(Youtube:不良林), server: 5.183.176.92, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-1003.8KB/s(Youtube:不良林), server: 5.183.176.92, port: 804, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇸🇬 新加坡-1.29MB/s(Youtube:不良林), server: sg1.jjzgy.live, port: 32333, type: trojan, password: 2aef06f4-6fa1-3fe4-9c08-8bdbd2cefe4e, sni: sg1.jjzgy.live, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-355.5KB/s(Youtube:不良林), server: 5.183.176.92, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.33MB/s(Youtube:不良林)
-      - 🇯🇵 日本-909.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-356.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-187.4KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.27MB/s(Youtube:不良林)
-      - 🇯🇵 日本-331.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.36MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-895.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.16MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.47MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-589.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-885.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.60MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-406.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.53MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1003.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.29MB/s(Youtube:不良林)
+      - 🇯🇵 日本-355.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇫🇷 法国-1.33MB/s(Youtube:不良林)
-      - 🇯🇵 日本-909.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-356.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-187.4KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.27MB/s(Youtube:不良林)
-      - 🇯🇵 日本-331.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.36MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-895.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.16MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.47MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-589.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-885.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.60MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-406.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.53MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1003.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.29MB/s(Youtube:不良林)
+      - 🇯🇵 日本-355.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.33MB/s(Youtube:不良林)
-      - 🇯🇵 日本-909.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-356.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-187.4KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.27MB/s(Youtube:不良林)
-      - 🇯🇵 日本-331.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.36MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-895.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.16MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.47MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-589.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-885.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.60MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-406.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.53MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1003.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.29MB/s(Youtube:不良林)
+      - 🇯🇵 日本-355.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇫🇷 法国-1.33MB/s(Youtube:不良林)
-      - 🇯🇵 日本-909.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-356.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-187.4KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.27MB/s(Youtube:不良林)
-      - 🇯🇵 日本-331.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.36MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-895.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.16MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.47MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-589.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-885.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.60MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-406.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.53MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1003.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.29MB/s(Youtube:不良林)
+      - 🇯🇵 日本-355.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.33MB/s(Youtube:不良林)
-      - 🇯🇵 日本-909.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-356.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-187.4KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.27MB/s(Youtube:不良林)
-      - 🇯🇵 日本-331.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.36MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-895.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.16MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.47MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-589.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-885.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.60MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-406.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.53MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1003.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.29MB/s(Youtube:不良林)
+      - 🇯🇵 日本-355.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-1.33MB/s(Youtube:不良林)
-      - 🇯🇵 日本-909.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-356.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-187.4KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.27MB/s(Youtube:不良林)
-      - 🇯🇵 日本-331.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.36MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-895.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.16MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.47MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-589.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-885.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.60MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-406.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.53MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1003.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.29MB/s(Youtube:不良林)
+      - 🇯🇵 日本-355.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-1.33MB/s(Youtube:不良林)
-      - 🇯🇵 日本-909.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-356.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-187.4KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.27MB/s(Youtube:不良林)
-      - 🇯🇵 日本-331.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.36MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-895.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.16MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.47MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-589.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-885.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.60MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-406.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.53MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1003.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.29MB/s(Youtube:不良林)
+      - 🇯🇵 日本-355.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
