--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,13 +5,13 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇬🇧 英国-348.2KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇫🇷 法国-303.1KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
-  - {name: 🇯🇵 日本-1.33MB/s(Youtube:不良林), server: 5.183.176.92, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇯🇵 日本-355.5KB/s(Youtube:不良林), server: 5.183.176.92, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇬🇧 英国-348.2KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇫🇷 法国-1.50MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
+  - {name: 🇯🇵 日本-700.1KB/s(Youtube:不良林), server: 185.172.113.226, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-1.33MB/s(Youtube:不良林), server: 5.183.176.92, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇯🇵 日本-1.29MB/s(Youtube:不良林), server: 5.183.176.92, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-1.13MB/s(Youtube:不良林), server: 5.183.176.92, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇯🇵 日本-1.07MB/s(Youtube:不良林), server: 5.183.176.92, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇯🇵 日本-683.1KB/s(Youtube:不良林), server: 5.183.176.92, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇷🇺 俄罗斯联邦-439.7KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
@@ -21,13 +21,13 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-348.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-303.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.33MB/s(Youtube:不良林)
       - 🇯🇵 日本-355.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-348.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.50MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
+      - 🇯🇵 日本-700.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.33MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.29MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.13MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.07MB/s(Youtube:不良林)
       - 🇯🇵 日本-683.1KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-439.7KB/s(Youtube:不良林)
@@ -36,13 +36,13 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇬🇧 英国-348.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-303.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.33MB/s(Youtube:不良林)
       - 🇯🇵 日本-355.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-348.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.50MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
+      - 🇯🇵 日本-700.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.33MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.29MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.13MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.07MB/s(Youtube:不良林)
       - 🇯🇵 日本-683.1KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-439.7KB/s(Youtube:不良林)
@@ -52,13 +52,13 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-348.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-303.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.33MB/s(Youtube:不良林)
       - 🇯🇵 日本-355.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-348.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.50MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
+      - 🇯🇵 日本-700.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.33MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.29MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.13MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.07MB/s(Youtube:不良林)
       - 🇯🇵 日本-683.1KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-439.7KB/s(Youtube:不良林)
@@ -72,13 +72,13 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇬🇧 英国-348.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-303.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.33MB/s(Youtube:不良林)
       - 🇯🇵 日本-355.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-348.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.50MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
+      - 🇯🇵 日本-700.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.33MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.29MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.13MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.07MB/s(Youtube:不良林)
       - 🇯🇵 日本-683.1KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-439.7KB/s(Youtube:不良林)
@@ -87,13 +87,13 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇬🇧 英国-348.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-303.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.33MB/s(Youtube:不良林)
       - 🇯🇵 日本-355.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-348.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.50MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
+      - 🇯🇵 日本-700.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.33MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.29MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.13MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.07MB/s(Youtube:不良林)
       - 🇯🇵 日本-683.1KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-439.7KB/s(Youtube:不良林)
@@ -103,13 +103,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-348.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-303.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.33MB/s(Youtube:不良林)
       - 🇯🇵 日本-355.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-348.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.50MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
+      - 🇯🇵 日本-700.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.33MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.29MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.13MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.07MB/s(Youtube:不良林)
       - 🇯🇵 日本-683.1KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-439.7KB/s(Youtube:不良林)
@@ -128,13 +128,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-348.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-303.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.33MB/s(Youtube:不良林)
       - 🇯🇵 日本-355.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-348.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.50MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
+      - 🇯🇵 日本-700.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.33MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.29MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.13MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.07MB/s(Youtube:不良林)
       - 🇯🇵 日本-683.1KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-439.7KB/s(Youtube:不良林)
