--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-355.5KB/s(Youtube:不良林), server: 5.183.176.92, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇦🇺 澳大利亚-1.99MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
+  - {name: 🇺🇸 美国-3.09MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
   - {name: 🇬🇧 英国-348.2KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇫🇷 法国-1.50MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
-  - {name: 🇯🇵 日本-700.1KB/s(Youtube:不良林), server: 185.172.113.226, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-1.33MB/s(Youtube:不良林), server: 5.183.176.92, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-1.29MB/s(Youtube:不良林), server: 5.183.176.92, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-1.07MB/s(Youtube:不良林), server: 5.183.176.92, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-683.1KB/s(Youtube:不良林), server: 5.183.176.92, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇷🇺 俄罗斯联邦-439.7KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇯🇵 日本-609.9KB/s(Youtube:不良林), server: 185.172.113.108, port: 804, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-473.3KB/s(Youtube:不良林), server: 185.172.113.108, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-472.4KB/s(Youtube:不良林), server: 5.183.176.83, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇸🇬 新加坡-898.3KB/s(Youtube:不良林), server: sg1.jjzgy.live, port: 32333, type: trojan, password: 2aef06f4-6fa1-3fe4-9c08-8bdbd2cefe4e, sni: sg1.jjzgy.live, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-698.1KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-1.83MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇯🇵 日本-1.17MB/s(Youtube:不良林), server: 185.172.113.226, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-355.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
       - 🇬🇧 英国-348.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.50MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
-      - 🇯🇵 日本-700.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.33MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.29MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.07MB/s(Youtube:不良林)
-      - 🇯🇵 日本-683.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-439.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-609.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-473.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-472.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-898.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-698.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.17MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-355.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
       - 🇬🇧 英国-348.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.50MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
-      - 🇯🇵 日本-700.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.33MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.29MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.07MB/s(Youtube:不良林)
-      - 🇯🇵 日本-683.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-439.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-609.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-473.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-472.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-898.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-698.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.17MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-355.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
       - 🇬🇧 英国-348.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.50MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
-      - 🇯🇵 日本-700.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.33MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.29MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.07MB/s(Youtube:不良林)
-      - 🇯🇵 日本-683.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-439.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-609.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-473.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-472.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-898.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-698.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.17MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-355.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
       - 🇬🇧 英国-348.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.50MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
-      - 🇯🇵 日本-700.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.33MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.29MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.07MB/s(Youtube:不良林)
-      - 🇯🇵 日本-683.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-439.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-609.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-473.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-472.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-898.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-698.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.17MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-355.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
       - 🇬🇧 英国-348.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.50MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
-      - 🇯🇵 日本-700.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.33MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.29MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.07MB/s(Youtube:不良林)
-      - 🇯🇵 日本-683.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-439.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-609.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-473.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-472.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-898.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-698.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.17MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-355.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
       - 🇬🇧 英国-348.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.50MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
-      - 🇯🇵 日本-700.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.33MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.29MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.07MB/s(Youtube:不良林)
-      - 🇯🇵 日本-683.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-439.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-609.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-473.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-472.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-898.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-698.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.17MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-355.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
       - 🇬🇧 英国-348.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.50MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
-      - 🇯🇵 日本-700.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.33MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.29MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.07MB/s(Youtube:不良林)
-      - 🇯🇵 日本-683.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-439.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-609.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-473.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-472.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-898.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-698.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.17MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
